--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,51 @@
-altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/altgraph-0.17.2-py2.py3-none-any.whl
-asgiref==3.8.1
+asgiref==3.7.2
 captcha==0.6.0
-Django==4.2.13
+certifi==2025.1.31
+cffi==1.16.0
+charset-normalizer==3.4.1
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==42.0.2
+defusedxml==0.8.0rc2
+Django==4.2.20
 django-debug-toolbar==5.0.1
-future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/future-0.18.2-py3-none-any.whl
-macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/macholib-1.15.2-py2.py3-none-any.whl
-pillow==11.1.0
-six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/six-1.15.0-py2.py3-none-any.whl
-sqlparse==0.5.0
-typing_extensions==4.12.0
+django-filter==23.5
+django-jazzmin==2.6.0
+django-ranged-response==0.2.0
+django-rest-swagger==2.2.0
+django-simple-captcha==0.6.2
+django-templated-mail==1.1.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+djoser==2.2.2
+drf-yasg==1.21.7
+gunicorn==23.0.0
+idna==3.10
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+oauthlib==3.2.2
+openapi-codec==1.3.2
+packaging==23.2
+pillow==10.2.0
+psycopg2==2.8.6
+psycopg2-binary==2.9.10
+pycparser==2.21
+PyJWT==2.8.0
+pyTelegramBotAPI==4.26.0
+python3-openid==3.2.0
+pytz==2023.4
+PyYAML==6.0.1
+requests==2.32.3
+requests-oauthlib==1.3.1
+simplejson==3.20.1
+social-auth-app-django==5.4.0
+social-auth-core==4.5.2
+sqlparse==0.4.4
+telebot==0.0.5
+typing_extensions==4.9.0
+uritemplate==4.1.1
+urllib3==2.2.0
+vboxapi==1.0
+watchdog==6.0.0
